# athread

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: BuildFunctions.cmake
samples/: graph_auto_shutdown.cpp  graph_calc_parallel.cpp  graph_data_analysis.cpp  graph_document_processing.cpp  graph_fibonacci.cpp  graph_image_processing.cpp  graph_matrix_sum.cpp  graph_pipeline.cpp  graph_simple.cpp  pool_auto_shutdown.cpp  pool_simple.cpp
src/athread/: athread.cpp  athread.h  diagnostics.cpp  diagnostics.h  executor.cpp  executor.h  node.h  noncopyable.h  runnable.h  status.h  task.cpp  task.h  threadgraph.cpp  threadgraph.h  threadpool.cpp  threadpool.h  version.h  worker.cpp  worker.h
tests/: CMakeLists.txt  test_back_propagation.cpp  test_catch_exception.cpp  test_executor.cpp  test_find_ready_node.cpp  test_graph_calc_parallel.cpp  test_graph_operators.cpp  test_graph_wait.cpp  test_task_iterator.cpp
